--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" href="./demo.css">
 </head>
 <body>
   <app></app>
-  <script src="build.js"></script>
+  <script src="build.js" type ="text/javascript"></script>
 </body>
 </html>
