--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="./demo.css">
+    <link rel="stylesheet" href="./dist/commonStyle.css">
 </head>
 <body>
-  <app></app>
-  <script src="./dist/build.js" type ="text/javascript"></script>
+  <div class="container">
+  	 <app></app>
+  </div>
+  <script src="./dist/main.js" type ="text/javascript"></script>
 </body>
 </html>
