--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <title></title>
     <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="./dist/commonStyle.css">
+    <style>
+        body{
+            padding-top: 140px;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-  	 <app></app>
-  </div>
+
+   <app></app>
+  
   <script src="./dist/main.js" type ="text/javascript"></script>
 </body>
 </html>
