代码目录调整为多模块做准备

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-   <app></app>
-  <script src="./dist/main.js" type ="text/javascript"></script>
+   <app v-bind:list ="list"></app>
+  <script src="./dist/index.js" type ="text/javascript"></script>
 </body>
 </html>
