--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-   <app v-bind:list ="list"></app>
+   <app></app>
   <script src="./dist/index.js" type ="text/javascript"></script>
 </body>
 </html>
