--- a/groupEdit.html
+++ b/groupEdit.html
@@ -13,6 +13,6 @@
 </head>
 <body>
    <app></app>
-  <script src="./dist/main.js" type ="text/javascript"></script>
+  <script src="./dist/groupEdit.js" type ="text/javascript"></script>
 </body>
 </html>
