--- a/groupEdit.html
+++ b/groupEdit.html
@@ -5,14 +5,10 @@
     <title></title>
     <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="./dist/commonStyle.css">
-    <style>
-        body{
-            padding-top: 140px;
-        }
-    </style>
 </head>
 <body>
-   <app></app>
+  <app></app>
+  <script type ="text/javascript" src ="./bower_components/jquery/dist/jquery.js"></script>
   <script src="./dist/groupEdit.js" type ="text/javascript"></script>
 </body>
 </html>
