页面布局进行调整为了与oc增加的吻合

--- a/groupEdit.html
+++ b/groupEdit.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./dist/commonStyle.css">
 </head>
 <body>
-  <app></app>
+  <app-layout></app-layout>
   <script type ="text/javascript" src ="./bower_components/jquery/dist/jquery.js"></script>
   <script src="./dist/groupEdit.js" type ="text/javascript"></script>
 </body>
