--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-   <app></app>
+   <app-layout></app-layout>
   <script src="./dist/index.js" type ="text/javascript"></script>
 </body>
 </html>
